src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>ClassSubject__c</fullName>
        <label>Class Subject</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassTopic__c</fullName>
        <label>Class Topic</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ClassSubject__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ClassTopic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>NumberOfStudents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ClassNameFormat</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Name, &quot;[A-Z]{3}[0-9]{3}&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please enter a class name with the format of XXX000. For Example History 100 should be entered as HIS100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateFormatRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(WEEKDAY(EndDate__c) &gt; 1 &amp;&amp; WEEKDAY(EndDate__c) &lt; 7)</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date can not be a Saturday or Sunday.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateFormatRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT (WEEKDAY( StartDate__c ) &gt; 1 &amp;&amp; WEEKDAY( StartDate__c ) &lt; 7)</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date can not be Saturday or Sunday.</errorMessage>
    </validationRules>
</CustomObject>